# Plantenna_2_Node

./: .gitignore  Air Flow Sensor Setup.docx  CMakeLists.txt  README.md  SPMS_NodeV1.hex  alt_flash.sh  prj.conf  test
alt_flash_tool/: alt_flash
boards/: nrf52dk_nrf52832.overlay
client/inc/: base_model.h  sensor_client.h  sensor_common.h  spms_ble.h  spms_libs.h
client/src/: base_model.c  main.c  sensor_client.c  sensor_common.c  spms_ble.c
hex/: SPMS_NodeV1.hex  SPMS_NodeVDemo.hex
inc/: bt_spms.h  peripherals.h  spms_ble.h  spms_bt_airflow.h  spms_bt_task.h  spms_libs.h  spms_local_storage.h  spms_sensor.h
inc/ble/: spms_ble.h
inc/mesh/: mesh_base_model.h  mesh_gen_onoff_client.h  mesh_gen_onoff_common.h  mesh_gen_onoff_server.h  mesh_sensor_client.h  mesh_sensor_common.h  mesh_sensor_setup_server.h
server/inc/: base_model.h  sensor_common.h  sensor_setup_server.h  spms_sensor.h
server/src/: base_model.c  main.c  sensor_common.c  sensor_setup_server.c  spms_sensor.c
src/: bt_spms.c  ccs811.c  main.c  peripherals.c  peripherals.cpp  spms_ble.c  spms_bt_airflow.c  spms_bt_task.c  spms_local_storage.c  spms_sensor.c
src/ble/: spms_ble.c
src/mesh/: mesh_base_model.c  mesh_gen_onoff_client.c  mesh_gen_onoff_server.c  mesh_sensor_client.c  mesh_sensor_setup_server.c
